Git-Ignore-File

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0/tools/RoslynLa
 packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0/tools/RoslynLatest/vbc.rsp
 packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0/tools/RoslynLatest/VBCSCompiler.exe
 /packages
+/.vs/xPen/config/applicationhost.config
+/.vs/xPen/v16/.suo
